# society

./: README.md  initial.md
backend/: .env.example  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/app/: config.py  dependencies.py  main.py
backend/app/api/v1/: __init__.py  arbitration.py  ateulis.py  auth.py  elections.py  endorsements.py  gamification.py  hierarchy.py  initiatives.py  notifications.py  sos.py  statistics.py  territories.py  users.py
backend/app/core/: database.py  security.py
backend/app/models/: __init__.py  arbitration.py  audit.py  base.py  election.py  endorsement.py  group.py  initiative.py  sos.py  territory.py  user.py
backend/app/utils/: enums.py
backend/docs/: DEVELOPMENT.md  LEARNING_PATH.md
docs/: api-architecture.md  data-model.md  system-architecture.md  technical-requirements.md
